more fixes for alignment and svg viewbox stuff

--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,13 @@ body{
 }
 
 svg {
-  width: 100%;
-  height: 100%;
+
+}
+
+#svg-container{
+	margin-left: auto;
+	margin-right: auto;
+	width: 800px;
+	height: 800px;
+	border: 1px dashed black;
 }
